--- a/news2.html
+++ b/news2.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Бух-учёт Спасск-Дальний</title>
-<meta name="Keywords" content="Спасск-Дальний, Бух-учёт, Бух-учёт Спасск-Дальний, Лучший бух-учёт">
+<title>Юнармия Спасск-Дальний</title>
+<meta name="Keywords" content="Юнармия">
 <link href="css2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
