--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Бух-учёт Спасск-Дальний</title>
-<meta name="Keywords" content="Спасск-Дальний, Бух-учёт, Бух-учёт Спасск-Дальний, Лучший бух-учёт">
+<title>Юнармия Спасск-Дальний</title>
+<meta name="Keywords" content="Юнармия Спасск-Дальний">
 <link id="" href="css.css" rel="stylesheet" type="text/css">
 </head>
 <body>
