--- a/how.html
+++ b/how.html
@@ -11,15 +11,14 @@
 <nav>
 <ul>
 	<a href="index.html"><li>Главная</li></a>
-	<a href="#" class="thispage"><li style="border-top: 2px double #D50000;">Новости</li></a>
+	<a href="news.html"><li>Новости</li></a>
 	<a href="about.html"><li>О нас</li></a>
 	<a href="contacts.html"><li>Состав группы</li></a>
-	<a href="how.html"><li>Как это было</li></a>
+	<a href="#" class="thispage"><li style="border-top: 2px double #D50000;">Как это было</li></a>
 	<a href="projects.html"><li>Проекты участников</li></a>
 </ul>
 </nav>
-	<div style="text-align: center; padding-top: 40px; font-size: 50px; text-decoration: underline;">Н<span class="red">О</span>В<span class="blue">О</span>СТИ</div>
-	<a href="#"><div class="new"><b>Что-то <span style="text-decoration: underline;">хочешь?</span></b></div></a>
+<div style="text-align: center; padding-top: 40px; font-size: 50px; text-decoration: underline;">К<span class="red">А</span>К<span class="blue"> Э</span>ТО БЫЛО</div>
 <footer><div class="block"> <!-- контейнер -->
  <div class="hover">Справка</div> <!-- видимый элемент -->
  <span class="hidden">Для работы с меню взаимодействуйте с красной полосой!</span> <!-- скрытый элемент -->
