--- a/about.html
+++ b/about.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Бух-учёт Спасск-Дальний</title>
-<meta name="Keywords" content="Спасск-Дальний, Бух-учёт, Бух-учёт Спасск-Дальний, Лучший бух-учёт">
+<title>Информатика 11</title>
+<meta name="Keywords" content="Спасск-Дальний, Информатика, Информатика Спасск-Дальний, Лучшая группа, Лучшая программа">
 <link href="css.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="logoinf.png" type="image/x-icon">
 </head>
 <body>
 <nav>
@@ -12,10 +13,12 @@
 	<a href="index.html"><li>Главная</li></a>
 	<a href="news.html"><li>Новости</li></a>
 	<a href="#" class="thispage"><li style="border-top: 2px double #D50000;">О нас</li></a>
-	<a href="contacts.html"><li>Контакты</li></a>
-	<a href="about2.html"><li style="border-top: 2px double #1B1B1B;">Переход на тёмную тему :)</li></a>
+	<a href="contacts.html"><li>Состав группы</li></a>
+	<a href="how.html"><li>Как это было</li></a>
+	<a href="projects.html"><li>Проекты участников</li></a>
 </ul>
 </nav>
+<div style="text-align: center; padding-top: 40px; font-size: 50px; text-decoration: underline;">О <span class="red">Н</span>А<span class="blue">С</span></div>
 <footer><div class="block"> <!-- контейнер -->
  <div class="hover">Справка</div> <!-- видимый элемент -->
  <span class="hidden">Для работы с меню взаимодействуйте с красной полосой!</span> <!-- скрытый элемент -->
