--- a/contacts.html
+++ b/contacts.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Бух-учёт Спасск-Дальний</title>
-<meta name="Keywords" content="Спасск-Дальний, Бух-учёт, Бух-учёт Спасск-Дальний, Лучший бух-учёт">
+<title>Информатика 11</title>
+<meta name="Keywords" content="Спасск-Дальний, Информатика, Информатика Спасск-Дальний, Лучшая группа, Лучшая программа">
 <link href="css.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="logoinf.png" type="image/x-icon">
 </head>
 <body>
 <nav>
@@ -12,10 +13,13 @@
 	<a href="index.html"><li>Главная</li></a>
 	<a href="news.html"><li>Новости</li></a>
 	<a href="about.html"><li>О нас</li></a>
-	<a href="#" class="thispage"><li style="border-top: 2px double #D50000;">Контакты</li></a>
-	<a href="contacts2.html"><li style="border-top: 2px double #1B1B1B;">Переход на тёмную тему :)</li></a>
+	<a href="#" class="thispage"><li style="border-top: 2px double #D50000;">Состав группы</li></a>
+	<a href="how.html"><li>Как это было</li></a>
+	<a href="projects.html"><li>Проекты участников</li></a>
 </ul>
 </nav>
+<div style="text-align: center; padding-top: 40px; font-size: 50px; text-decoration: underline;">С<span class="red">О</span>С<span class="blue">Т</span>АВ ГРУППЫ</div>
+<div class="blockl"><p style="margin-bottom: 0px;">Ольга Викторовна</p><br><img src="olgavictorovna.jpg" style="margin-top: 0px; padding-bottom: 50px; border-bottom: 3px dashed #D50000;" width="350px" title="главарь"><p>Главарь, по совместительству единственный здравомыслящий человек в группе</p></div>
 <footer><div class="block"> <!-- контейнер -->
  <div class="hover">Справка</div> <!-- видимый элемент -->
  <span class="hidden">Для работы с меню взаимодействуйте с красной полосой!</span> <!-- скрытый элемент -->
