--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Бух-учёт Спасск-Дальний</title>
-<meta name="Keywords" content="Спасск-Дальний, Бух-учёт, Бух-учёт Спасск-Дальний, Лучший бух-учёт">
+<title>Информатика 11</title>
+<meta name="Keywords" content="Спасск-Дальний, Информатика, Информатика Спасск-Дальний, Лучшая группа, Лучшая программа">
 <link id="" href="css.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="logoinf.png" type="image/x-icon">
 </head>
 <body>
 <nav>
@@ -12,14 +13,15 @@
 	<a href="#" class="thispage"><li style="border-top: 2px double #D50000;">Главная</li></a>
 	<a href="news.html"><li>Новости</li></a>
 	<a href="about.html"><li>О нас</li></a>
-	<a href="contacts.html"><li>Контакты</li></a>
-	<a href="index2.html"><li style="border-top: 2px double #1B1B1B;">Переход на тёмную тему :)</li></a>
+	<a href="contacts.html"><li>Состав группы</li></a>
+	<a href="how.html"><li>Как это было</li></a>
+	<a href="projects.html"><li>Проекты участников</li></a>
 </ul>
 </nav>
 	<div class="lol-n">ПРИВЕТСТВУЕМ <span class="red">ТЕБЯ!</span></div>
-	<div class="lol"><span class="red">Ты</span> находишься на прототипе сайта <span style="color:#2673DC">ЮНАРМИЯ</span><img src="Army2673DC.png" width="50px" style="vertical-align: middle"></div>
-	<div class="lol">И именно <span class="red">ты</span> можешь помочь исправить все баги и проблемы до выхода.</div>
-	<div class="lol">Для управления используй <span class="red">красную</span> полосу вышеее</div>
+	<div class="lol"><span class="red">Ты</span> находишься на сайте <span style="color:#C30003;">ИНФОРМАТИКА 11</span><img src="logoinf.png" width="70px" style="vertical-align: middle"></div>
+	<!--<div class="lol"><b>И именно <span class="red">ты</span> ЛОХ</b></div>-->
+	<div class="lol">Для управления используй <span class="red">красную</span> полосу вышеее</div><!---->
 <footer><div class="block"> <!-- контейнер -->
  <div class="hover">Справка</div> <!-- видимый элемент -->
  <span class="hidden">Для работы с меню взаимодействуйте с красной полосой!</span> <!-- скрытый элемент -->
